fix: superspision of the box when the isVisible class is not in use using z-index

--- a/src/app/shared/components/volume-box/volume-box.component.scss
+++ b/src/app/shared/components/volume-box/volume-box.component.scss
@@ -20,6 +20,7 @@ div {
   transition: transform 0.5s ease-in;
 
   transform: translateY(-200px);
+  z-index: -10;
 
 }
 
@@ -55,4 +56,5 @@ progress::-moz-progress-bar {
 .isVisible {
   transform: translateY(0px);
   transition: transform 0.5s ease-in;
+  z-index: 0;
 }
